New sync loop implementation, download part.

--- a/common/index/Makefile.am
+++ b/common/index/Makefile.am
@@ -3,9 +3,9 @@ AM_CPPFLAGS = -Wall -I${top_srcdir}/common -I${top_srcdir}/lib \
 
 noinst_LTLIBRARIES = libindex.la
 
-noinst_HEADERS = index.h hash.h cache-tree.h
+noinst_HEADERS = index.h cache-tree.h
 
-libindex_la_SOURCES = index.c hash.c name-hash.c cache-tree.c
+libindex_la_SOURCES = index.c cache-tree.c
 
 libindex_la_CFLAGS = @GLIB2_CFLAGS@
 libindex_la_LDFLAGS = -Wl,-z -Wl,defs
